<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.weigend</groupId>
    <artifactId>structure202-parent</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>Structure202 - Multi-Module Project</name>
    <description>Parent POM for S202 Code Analyzer and Test Examples</description>

    <modules>
        <module>analyzer</module>
        <module>test-example</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

</project>
